src/test/deca/context/valid/created/miscellaneous/A_null.deca
// Description :
//    test cast entre un A et null
//
// Resultats :
//		Ok
	

class A {}
{
(A)(null);
}
